tests/paczka1/fuzzy1/13788086.err
Error in line 3: oXagO A282 -1,3
Error in line 6: VwDLsFk A323 7,9
Error in line 14: kF7NrQe A282 28,14
Error in line 19: wsmOmN A323 91,94
Error in line 24: Xhvd A323 55,8
Error in line 1: oXagO A282 16,4
Error in line 29: Xhvd A338 64,8
Error in line 22: VwDLsFk A282 34,9
Error in line 36: VwDLsFk A338 13,4
